--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
 .App {
   text-align: center;
 }
-ul {
-  margin-top: 0;
-}
+
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -13,7 +11,7 @@ ul {
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
