--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,4 +1,79 @@
-.navbar-container {
-    height: 3em;
-    background-color: aquamarine;
+.navbar-container{
+    height: 4em;
+    background-color: lightblue;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+.left-container {
+    width: 20%;
+}
+.right-container {
+    min-width: 80%; 
+    display: flex;
+    justify-content: flex-end;  
+    width: 10%;
+}
+.app-title {
+    position: relative;
+    top: -20%;
+    margin-right: 1em;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    top: 11%;
+    margin-left: 1em;
+    margin-right: 2px;
+    height: 80%;
+}
+.dropdown-button {
+    cursor: pointer;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+    width: 9.5em;    
+    max-width: 9.5em;
+    height: 97%;
+
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  z-index: 1;
+}
+
+.dropdown-content a {
+    display: block;
+    text-decoration: none;
+    padding: 1em;
+    
+}
+
+.dropdown:hover .dropdown-content{
+    display: block;
+}
+.search-input {
+    width: 90%;
+    height: 70%;
+    position: relative;
+    top: 12%;
+    font-size: 150%;
+    padding-left: 1%;
+}
+
+.search-button {
+    height: 80%;
+    margin-left: 2px;
+    position: relative;
+    top: 11%;
+    width: 10%;
+    cursor: pointer;
+}
+
+.dropdown-item {
+    cursor: pointer;
+    font-size: 1.3em;
 }
