--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -14,9 +14,10 @@
 }
 .image {
   width: 100%;
-  height: 60%;
+  height: 70%;
   cursor: pointer;
 }
 .margins {
   margin-left: 5px;
+  margin-top: 2px;
 }
